[package]
name = "cumulus-test-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.0" }
rand = "0.7.3"
serde = { version = "1.0.101", features = ["derive"] }
async-trait = "0.1.42"
tokio = { version = "1.10", features = ["macros"] }

# Substrate
frame-system = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
pallet-transaction-payment = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-basic-authorship = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-rpc = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-arithmetic = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-keyring = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "elois-jsonrpsee" }
sp-state-machine = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-trie = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
substrate-test-client = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Polkadot
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-service = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }
polkadot-test-service = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# Cumulus
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-relay-validation-worker-provider = { path = "../relay-validation-worker-provider" }

# RPC related dependencies
jsonrpc-core = "18.0.0"

[dev-dependencies]
futures = "0.3.5"

# Polkadot dependencies
polkadot-test-service = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# Substrate dependencies
sc-cli = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
substrate-test-utils = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-maybe-compressed-blob = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-version = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Cumulus
cumulus-test-runtime-upgrade = { path = "../runtime-upgrade" }
