[package]
name = "cumulus-client-consensus-common"
description = "Cumulus specific common consensus implementations"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate deps
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
sp-trie = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }
substrate-prometheus-endpoint = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-v0.7" }
polkadot-runtime = { git = "https://github.com/purestake/polkadot", branch = "moonbeam-v0.7" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
tracing = "0.1.25"
async-trait = "0.1.42"
dyn-clone = "1.0.4"

[dev-dependencies]
# Substrate deps
sp-tracing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-v0.7" }

# Cumulus dependencies
cumulus-test-runtime = { path = "../../../test/runtime" }
cumulus-test-client = { path = "../../../test/client" }

# Other deps
futures-timer = "3.0.2"
