[package]
name = "cumulus-client-consensus-common"
description = "Cumulus specific common consensus implementations"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate deps
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-trie = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = { package = "parity-scale-codec", version = "2.3.0", features = [ "derive" ] }
tracing = "0.1.25"
async-trait = "0.1.42"
dyn-clone = "1.0.4"

[dev-dependencies]
# Substrate deps
sp-tracing = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
# Cumulus dependencies
cumulus-test-client = { path = "../../../test/client" }
# Other deps
futures-timer = "3.0.2"
