[package]
name = "cumulus-client-consensus-relay-chain"
description = "The relay-chain provided consensus algorithm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate deps
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sp-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }
substrate-prometheus-endpoint = { git = "https://github.com/purestake/substrate", branch = "elois-jsonrpsee" }

# Polkadot dependencies
polkadot-client = { git = "https://github.com/purestake/polkadot", branch = "elois-jsonrpsee" }

# Cumulus dependencies
cumulus-client-consensus-common = { path = "../common" }
cumulus-primitives-core = { path = "../../../primitives/core" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
tracing = "0.1.22"
async-trait = "0.1.42"
parking_lot = "0.10.2"
